syntax = "proto3";
package Pylonstech.pylons.pylons;

import "pylons/redeem_info.proto";
import "pylons/payment_info.proto";
import "pylons/accounts.proto";
import "pylons/trade.proto";
import "pylons/google_iap_order.proto";
import "pylons/execution.proto";
import "pylons/item.proto";
import "pylons/recipe.proto";
import "pylons/cookbook.proto";
import "pylons/params.proto";

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

import "gogoproto/gogo.proto";

// GenesisState defines the pylons module's genesis state.
message GenesisState {
		repeated RedeemInfo redeemInfoList = 16 [(gogoproto.nullable) = false]; 
		repeated PaymentInfo paymentInfoList = 15 [(gogoproto.nullable) = false]; 
		repeated UserMap accountList = 14 [(gogoproto.nullable) = false];  
		repeated Trade tradeList = 13 [(gogoproto.nullable) = false];  
		uint64 tradeCount = 12; 
		uint64 entityCount = 11;
	  Params params = 10 [(gogoproto.nullable) = false];
		repeated GoogleInAppPurchaseOrder googleInAppPurchaseOrderList = 8 [(gogoproto.nullable) = false];
		uint64 googleIAPOrderCount = 9;
		repeated Execution executionList = 7 [(gogoproto.nullable) = false]; 
		uint64 executionCount = 6;
		repeated Execution pendingExecutionList = 5 [(gogoproto.nullable) = false];
		uint64 pendingExecutionCount = 4; 
		repeated Item itemList = 3 [(gogoproto.nullable) = false]; 
		repeated Recipe recipeList = 2 [(gogoproto.nullable) = false]; 
		repeated Cookbook cookbookList = 1 [(gogoproto.nullable) = false];
}
